# AI-Video-Transcriber

./: .gitignore  README.md  main.py  package-lock.json  pyproject.toml  requirements.txt  summarizer.py  system_prompt.txt  transcriber.py  utils.py
backend/: app.py  pyproject.toml  summarizer.py  utils.py
frontend/: index.html
frontend/src/: App.css  App.tsx  index.css
